--- a/index.html
+++ b/index.html
@@ -7,26 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
   </head>
-
-  
-    <div class="vertical-center">
-      <div id="content" class="container">
-        <div class="text-center text-light">
-          <div class="me">
-            <h1>Adrián Tóth</h1>
-          </div>
-          <div class="container about">
-            <div class="row justify-content-md-center">
-              <div class="col col-lg-2">
-                <a href="https://sourcerer.io/europ">
-                  <img src="img/sourcerer.png" alt="img/sourcerer.png" width="40px" height="46px"/>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <body>
 
     <div id="particles-js"></div>
   </body>
