--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
    <meta charset="utf-8">
    <title>StudyCrisp | Welcome!</title>
+   
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	<link rel="stylesheet" type="text/css" href="style.css"/>
+	
 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 	 
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
@@ -35,7 +38,7 @@
 					<ul class="nav navbar-nav">
             <!--home-->
 						<li class="nav-item active">
-							 <a class="nav-link active" href="#">Home</a>
+							 <a class="nav-link active" href="https://studycrisp.com">Home</a>
 						</li>
                 <!--UPSC button start-->
 						<li class="nav-item dropdown">
@@ -340,7 +343,7 @@
             </footer>
         
 <!--   footer end-->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.0.0/less.min.js" ></script>
+    <script src="https//cdnjs.cloudflare.com/ajax/libs/less.js/3.0.0/less.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.js" ></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="js/jquery.min.js"></script>
