--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img alt="logo.png" src="images/logo_s.png">
             </div>
 <!--Navigation Bar Start-->
-			<nav class="navbar navbar-expand-md navbar-expand-lg navbar-light bg-light sticky-top">
+			<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <!--mobile view -->
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav">
 					<span class="navbar-toggler-icon"></span>
