--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</li>
                 <!--UPSC button start-->
 						<li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="collapse"> UPSC  </a>
+                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"> UPSC  </a>
                             <ul class="dropdown-menu animate__animated animate__fadeIn">
                                 <li><a class="dropdown-item" href="#"> Sylabus </a></li>
                               <li><a class="dropdown-item animate__animated animate__fadeIn" href="#"> Prelims &raquo</a>
@@ -64,7 +64,7 @@
                     <!--Upsc button end-->
                     <!--Other Exam menu start-->
 						<li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle " href="#" data-toggle="collapse">Other Exams </a>
+                            <a class="nav-link dropdown-toggle " href="#" data-toggle="dropdown">Other Exams </a>
                             <ul class="dropdown-menu animate__animated animate__fadeIn">
                              <li><a class="dropdown-item" href=""> Daily Current Affairs</a></li>
                               <li><a class="dropdown-item" href="#">Banking and SSC &raquo</a>
