--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
                 <!--First slide-->
                 <div class="carousel-item active">
 
-                  <div class="col-md-12" style="float:left">
-                   <div class="card mb-2">
+                  <div class="col-md-12" style="float:left; height: 20%; overflow: hidden;">
+                   <div class="card mb-2";>
                       <img class="card-img-top"
                         src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
                       <div class="card-body">
@@ -323,17 +323,18 @@
                    <div class="col-md-12">
                       <div class="row">
                        <div class="col-md-4"><img alt="Logo" src=""></div>
-                       <div class="col-md-4" id="quicklink">
-                           Quick Links
-                           <ul class="nav flex-column">
-                              <li class="nav-item">
-                                <a class="nav-link active" href="#">Active</a>
+                       <div class="col-md-4" id="quicklink" style="text-align: center;">
+                           <h6 style="color: aliceblue;">Quick Links</h6>
+                           <hr style="width: 15px;">
+                           <ul style="list-style-type: none;">
+                              <li >
+                                <a href="#">Active</a>
                               </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                              <li >
+                                <a href="#">Link</a>
                               </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                              <li>
+                                <a href="#">Link</a>
                               </li>
                             </ul>
                        </div>
