--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
    <meta charset="utf-8">
    <title>StudyCrisp | Welcome!</title>
+   <link rel="icon" href="images/logo.png" type="image/png">
    
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
@@ -24,7 +25,7 @@
 		    <div class="col-md-12" style="margin: 0; padding: 0;">
 <!--website logo-->
             <div class="logo" id="particles-js" >
-                <img alt="logo.png" src="images/logo_s.png">
+                <img alt="logo.png" src="images/s.logo.png">
             </div>
 <!--Navigation Bar Start-->
 			<nav class="navbar navbar-expand-md navbar-light" style="margin: 5px">
@@ -33,7 +34,7 @@
 					<span class="navbar-toggler-icon"></span>
 				</button> 
         <!--Brand name-->
-				<a class="navbar-brand" href="https://studycrisp.com" style="color: darkgreen;  text-shadow: 2px 2px greenyellow;">StudyCrisp</a>
+				<a class="navbar-brand" href="https://studycrisp.com" style="color: darkgreen;  text-shadow: 2px 2px greenyellow;"><img src="images/logo.png" class="brandlogo"> StudyCrisp</a>
 				<div class="collapse navbar-collapse" id="main_nav" data-hover="dropdown">
 					<ul class="nav navbar-nav">
             <!--home-->
