--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
 	    <div class="row">
 		    <div class="col-md-12" style="margin: 0; padding: 0;">
 <!--website logo-->
-            <div class="logo" id="particles-js" >
-                <img alt="logo.png" src="images/s.logo.png">
+                <div class="logo" id="particles-js" >
+                    <img alt="logo.png" src="images/logo2.png">
+                </div>
             </div>
+            
 <!--Navigation Bar Start-->
+        <div class="col-md-12" style="margin: 0; padding: 0;">
 			<nav class="navbar navbar-expand-md navbar-light" style="margin: 5px">
     <!--mobile view -->
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav">
