--- a/index.html
+++ b/index.html
@@ -324,11 +324,11 @@
 
              <footer class="footer">
                   <div class="row">
-                   <div class="col-md-12">
+                   <div class="col-md-12" style="border-bottom: 1px solid rgba(154,154,154,0.2);background: rgb(59,68,75); padding: 10px">
                       <div class="row">
-                       <div class="col-md-4"><img alt="Logo" src=""></div>
+                       <div class="col-md-4"><img alt="Logo" src="images/logo2.png" style="width: 300px; height: auto; margin-left: 10%; margin-top: 20px; padding-right: 10%; border-right: 1px solid rgba(154,154,154,0.2);"></div>
                        <div class="col-md-4" id="quicklink" style="text-align: center;">
-                           <h6 style="color: aliceblue;">Quick Links</h6>
+                           <h6 style="color: aliceblue; margin-top: 50px; margin-left:40px;">Quick Links</h6>
                            <hr style="width: 15px;">
                            <ul style="list-style-type: none;">
                               <li >
