--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                   <div class="row">
                    <div class="col-md-12" style="border-bottom: 1px solid rgba(154,154,154,0.2);background: rgb(59,68,75); padding: 10px;">
                       <div class="row">
-                       <div class="col-md-4" style="border-right: 1px solid rgba(154,154,154,0.2);"><img alt="Logo" src="images/logo2.png" style="width: 300px; height: auto; margin-left: 20%; margin-top: 20px; padding-right: 10%; "></div>
+                       <div class="col-md-4 bottomLogo" style="border-right: 1px solid rgba(154,154,154,0.2);"><img alt="Logo" src="images/logo2.png" style="width: 300px; height: auto; margin-left: 20%; margin-top: 20px; padding-right: 10%; "></div>
                        <div class="col-md-4" id="quicklink" style="text-align: center;">
                            <h6 class="quicklink">Quick Links <span style=" background :orange; display: block; height: 1px;margin-top: 10px;position: relative;width: 30%; margin-left: 35%"></span></h6>
                            <br>
