--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
              <footer class="footer">
                   <div class="row">
-                      <div class="col-md-12" style="height: 40px;width: inherit;"></div>
+                      <div class="col-md-12" style="height: 40px;width: inherit; padding: 10px;"></div>
                    <div class="col-md-12" style="border-bottom: 1px solid rgba(154,154,154,0.2);background: rgb(59,68,75); padding: 10px;">
                       <div class="row">
                        <div class="col-md-4 bottomLogo" style="border-right: 1px solid rgba(154,154,154,0.2);"><img alt="Logo" src="images/logo2.png" style="width: 300px; height: auto; margin-left: 20%; margin-top: 20px; padding-right: 10%; "></div>
