--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <div class="container-fluid" >
 	    <div class="row">
-		    <div class="col-md-12" style="margin: 0; padding: 0;">
-<!--website logo-->
+	    <!--website logo-->
+		    <div class="col-md-12" style="margin: 0; padding: 0; width: 100%;">
                 <div class="logo" id="particles-js" >
                     <img alt="logo.png" src="images/logo2.png">
                 </div>
@@ -327,7 +327,10 @@
                       <div class="col-md-12" style="height: 40px;width: inherit; padding: 10px;"></div>
                    <div class="col-md-12" style="border-bottom: 1px solid rgba(154,154,154,0.2);background: rgb(59,68,75); padding: 10px;">
                       <div class="row">
-                       <div class="col-md-4 bottomLogo" style="border-right: 1px solid rgba(154,154,154,0.2);"><img alt="Logo" src="images/logo2.png" style="width: 300px; height: auto; margin-left: 20%; margin-top: 20px; padding-right: 10%; "></div>
+                       <div class="col-md-4" style="border-right: 1px solid rgba(154,154,154,0.2);"><img class="bottomLogo" alt="Logo" src="images/logo2.png" style="width: 300px; height: auto; margin-left: 20%; margin-top: 20px; padding-right: 10%; ">
+                       <img  class="mobileLogo" alt="Logo" src="images/logo.png">
+                       
+                       </div>
                        <div class="col-md-4" id="quicklink" style="text-align: center;">
                            <h6 class="quicklink">Quick Links <span style=" background :orange; display: block; height: 1px;margin-top: 10px;position: relative;width: 30%; margin-left: 35%"></span></h6>
                            <br>
@@ -348,12 +351,12 @@
                             </ul>
                        </div>
                        
-                       <div class="col-md-4" id="contact" style="text-align: center;border-left: 1px solid rgba(154,154,154,0.2);">
+                       <div class="col-md-4" class="contact" style="text-align: center;border-left: 1px solid rgba(154,154,154,0.2);">
                        <h6 class="contacts">Contacts <span style=" background :orange; display: block; height: 1px;margin-top: 10px;position: relative;width: 25%; margin-left: 38%"></span></h6>
-                          <a class="email" href="mailto:info.studycrisp@gmail.com" style="margin-left: 20px; color: whitesmoke; text-decoration: none;">Email Us!<br> <span style="margin-left: 40px;">info.studycrisp@gmail.com</span></a>
+                          <a class="email" href="mailto:info.studycrisp@gmail.com" style="margin-left: 20px; color: whitesmoke; text-decoration: none;">Email Us!<br> <span class="emailId" style="margin-left: 40px;">info.studycrisp@gmail.com</span></a>
                           <br>
                           <br>
-                           <ul class="s_media"style="list-style-type: none;">
+                           <ul class="s_media">
                               <li >
                                 <a href="#"><img src="https://img.icons8.com/fluent/48/000000/facebook-new.png"/></a>
                               </li>
